# plotterX

./: .gitignore  CMakeLists.txt  Camera.h  Colors.h  Constants.h  DataTable.cpp  DataTable.h  DrawFigures.h  Errors.h  FuncEval.cpp  FuncEval.h  GraphRenderer.h  PLOTTERX.pptx  Parser.h  PlotterX.cpp  PlotterX.h  README.md  Surface.h  TestAllModules.cpp  TestDataTable.cpp  TestFuncEval.cpp  TestGraphRenderer.cpp  TestModules.h  TestParser.cpp  TestPlotterX.cpp  TestPostParser.cpp  TestSurface.cpp  TestTimeCurve.cpp  TestVariable.cpp  TimeCurve.h  UIBasics.h  UIConstants.h  UIInput.cpp  UIInput.h  UIVariablesInput.cpp  UserInterface.cpp  UserInterface.h  Variable.cpp  Variable.h
UI/: CameraTmp.h  MouseInputs.h  TextString.cpp  TextString.h  UIBasics.h  UIConstants.h  UIIcons.h  UIInput.cpp  UIInput.h  UIUtilities.cpp  UIUtilities.h  UIVariablesInput.cpp  UIVariablesInput.h  UserInterface.cpp  UserInterface.h  fssimplewindow.cpp  fssimplewindow.h  main.cpp
include/: Constants.h  DataTable.h  DrawFigures.h  FuncEval.h  MouseInputs.h  Parser.h  TimeCurve.h  UIBasics.h  UIInput.h
simplewindow/: CMakeLists.txt
simplewindow/linux/: fssimplewindow.cpp
simplewindow/macosx/: fssimplewindowcpp.cpp
simplewindow/windows/: fssimplewindow.cpp
src/: PlotterX.cpp  TestGraphRenderer.cpp  TestSurface.cpp  TestVariable.cpp  UIUtilities.cpp  fssimplewindow.cpp  main.cpp
